- Players can now toggle rare scan in the settings. This is complete with a clickable popup and a map ping sound.