@@ -1,1 +1,2 @@
+- Players can now enter up to gold cap for the Deposit Keep amount.
 - Players can now toggle rare scan in the settings. This is complete with a clickable popup and a map ping sound.
